# dpdk

dpdk-21.11-lts/: meson.build  meson_options.txt
dpdk-21.11-lts/app/test/: meson.build  test_xmmt_ops.h
dpdk-21.11-lts/config/riscv64/: meson.build  riscv64_linux_gcc_cross
dpdk-21.11-lts/drivers/net/: meson.build
dpdk-21.11-lts/drivers/net/ixgbe/: ixgbe_rxtx.c
dpdk-21.11-lts/drivers/net/memif/: rte_eth_memif.h
dpdk-21.11-lts/drivers/net/tap/: tap_bpf.h
dpdk-21.11-lts/examples/: meson.build
dpdk-21.11-lts/lib/eal/riscv64/: meson.build  rte_cpuflags.c  rte_cycles.c  rte_power_intrinsics.c
dpdk-21.11-lts/lib/eal/riscv64/include/: meson.build  rte_atomic_64.h  rte_byteorder.h  rte_cpuflags_64.h  rte_cycles_64.h  rte_mcslock.h  rte_memcpy.h  rte_pause_32.h  rte_pflock.h  rte_power_intrinsics.h  rte_rwlock.h  rte_spinlock.h  rte_ticketlock.h  rte_vect.h
dpdk-21.11-lts/lib/lpm/: rte_lpm_sse.h
dpdk-stable-20.11.1/: meson.build  meson_options.txt
dpdk-stable-20.11.1/app/test/: meson.build
dpdk-stable-20.11.1/config/riscv64/: meson.build  riscv64_linux_gcc_cross  riscv64_linux_gcc_native
dpdk-stable-20.11.1/drivers/net/enic/: meson.build
dpdk-stable-20.11.1/drivers/net/ixgbe/: ixgbe_rxtx.c
dpdk-stable-20.11.1/drivers/net/memif/: rte_eth_memif.h
dpdk-stable-20.11.1/examples/: meson.build
dpdk-stable-20.11.1/lib/librte_eal/riscv64/: rte_cpuflags.c
dpdk-stable-20.11.1/lib/librte_eal/riscv64/include/: rte_atomic.h  rte_atomic_32.h  rte_byteorder.h  rte_cpuflags.h  rte_cpuflags_32.h  rte_cycles.h  (+11 more)
dpdk-stable-20.11.1/lib/librte_lpm/: rte_lpm_sse.h
